kubernetes/bosca/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: bosca
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - api.bosca.io
    secretName: api-bosca-tls
  rules:
    - host: api.bosca.io
      http:
        paths:
          - pathType: Prefix
            path: "/v1/accounts"
            backend:
              service:
                name: accounts
                port:
                  number: 5001
          - pathType: Prefix
            path: "/signin-google"
            backend:
              service:
                name: accounts
                port:
                  number: 5001
          - pathType: Prefix
            path: "/v1/mail"
            backend:
              service:
                name: mail
                port:
                  number: 5002
          - pathType: Prefix
            path: "/v1/content"
            backend:
              service:
                name: content
                port:
                  number: 5003
          - pathType: Prefix
            path: "/v1/profiles"
            backend:
              service:
                name: profiles
                port:
                  number: 5004
